@@ -1,0 +1,4 @@
+@('a', 'b', 'c', 1, 2, 3, 4, 5, 'a', 'b', 'c')
+@('a', 'b', 'test', 1, 2, 3, 4, 5, 'a', 'b', 'c')
+blah and @(2, 3, 4, 5)
+blah and @('blah', 2, 3, 4, 5)
